// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallAppItem component should be rendered correctly an app 1`] = `
<div
  className="sto-small-app-item"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <img
    alt="test-icon"
    className="sto-small-app-item-icon"
    height="64"
    src="<svg></svg>"
    width="64"
  />
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy 
      Test
    </h4>
    <p
      className="sto-small-app-item-detail"
    >
      Cozy Cloud Inc.
    </p>
    <Link
      className="c-btn c-btn--regular c-btn--tiny sto-small-app-item-button sto-small-app-item-button-install"
      onClick={[Function]}
      replace={false}
      to="/discover/test/manage"
    >
      <span>
        Install
      </span>
    </Link>
  </div>
</div>
`;

exports[`SmallAppItem component should be rendered correctly an installed app 1`] = `
<div
  className="sto-small-app-item"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <img
    alt="test2-icon"
    className="sto-small-app-item-icon"
    height="64"
    src="<svg></svg>"
    width="64"
  />
  <Icon
    className="sto-small-app-item-badge-installed"
    color="#2bba40"
    icon="check"
  />
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-detail"
    >
      Naming me
    </p>
    <Button
      busy={false}
      className="sto-small-app-item-button"
      disabled={false}
      extension=""
      icon={null}
      label="Open"
      onClick={[Function]}
      size="tiny"
      theme="secondary"
      type="submit"
    />
  </div>
</div>
`;

exports[`SmallAppItem component should be rendered correctly an installed app without icon provided 1`] = `
<div
  className="sto-small-app-item"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <Icon
    className="sto-small-app-item-icon--default blurry"
    color="#95999D"
    height="64"
    icon="test-file-stub"
    width="48"
  />
  <Icon
    className="sto-small-app-item-badge-installed"
    color="#2bba40"
    icon="check"
  />
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy 
      Test2
    </h4>
    <p
      className="sto-small-app-item-detail"
    >
      Naming me
    </p>
    <Button
      busy={false}
      className="sto-small-app-item-button"
      disabled={false}
      extension=""
      icon={null}
      label="Open"
      onClick={[Function]}
      size="tiny"
      theme="secondary"
      type="submit"
    />
  </div>
</div>
`;
